# QSC

./: Constants.py  HomingType.py  MM.py  Percentage.py  README.md  StepType.py  U.py  __init__.py  filletData.txt  ploj.py  qsc.py  qsc_row1_1x1.stl  qsc_row2_1x1.stl  qsc_row3_1x1.stl  qsc_row4_1x1.stl  qsc_test.py  setup.cfg  your_caps_here.py
old/: qsc_4rows_1each.gx  qsc_row1_1x1_1_LEGEND.stl  qsc_row1_6.25x1_stepped.step  qsc_row2_1x1_2.stl  qsc_row2_1x1_2_LEGEND.stl  qsc_row3_16.25x1.step  qsc_row3_16.25x1_stepped.step  qsc_row3_1x1.stl  qsc_row3_1x1_3_LEGEND.stl  qsc_row3_1x1_A_LEGEND.stl  qsc_row4_1x1_4_LEGEND.stl
qsc/: Constants.py  MM.py  Percentage.py  StepSettings.py  U.py  __init__.py  base.py  constants.py  dish.py  homing.py  mm.py  percentage.py  qsc.py  qsc_test.py  raised_position.py  rounding_type.py  step_settings.py  step_type.py  types.py  u.py
qsc/legend/: __init__.py  legend.py  legend_settings.py
qsc/stem/: CherrySettings.py  StemSettings.py  StemType.py  __init__.py  cherry_settings.py  stem.py  stem_settings.py  support.py
tests/qsc/: qsc_test.py
