[metadata]
name = qsc
version = 0.0.1
author = qwelyt
author_email = qwelyt@users.noreply.github.com
description = A cadquery parametric part collection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qwelyt/qsc
project_urls =
    Bug Tracker = https://github.com/qwelyt/qsc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: CERN-OHL-S v2
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
include_package_data = True
[options.packages.find]
where = src
exclude = *examples*